--- a/estilo/style.css
+++ b/estilo/style.css
@@ -61,8 +61,9 @@ nav {
     justify-content: space-between;
     display: flex;
     align-items: center;
-    padding: 1rem;
-    height: 70px;
+    padding: 30px;
+    
+    
 
 }
 
@@ -80,12 +81,14 @@ a {
 
 a:hover {
     background: var(--cor2);
+    color: white;
 }
 
 #menu {
     display: flex;
     list-style: none;
     gap: .5rem;
+    
 }
 
 #menu a {
@@ -94,21 +97,82 @@ a:hover {
 }
 
 #btn-mobile {
+    margin: auto;
     display: none;
 }
 
 @media (max-width: 600px) {
-    #btn-mobile {
-        display: block;
-    }
+    
 
     #menu {
-        display: none;
+        text-align: center;
+        display: block;
+        position: absolute;
+        top: 365px;
+        width: 100%;
+        right: 0px;
+        background-image: linear-gradient(to bottom, var(--cor0), var(--cor4));
+        height: 0px;
+        transition: .6s;
+        z-index: 1000;
+        visibility: hidden;
+        overflow: hidden;
     }
     
-    #nav.active #menu {
-        display: flex;
+    #nav.active  #menu {
+        height: calc(100vh - 25%);
+        visibility: visible;
+        overflow-y: auto;
+        
     }
+
+    #menu a {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 2px solid rgba(0, 0, 0, .05);
+    }
+
+    #btn-mobile {
+        display: flex;
+        padding: .5rem 1rem;
+        font-size: 1.2rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: .5rem;
+    }
+
+    #hamburger {
+       
+        border-top: 2px solid;
+        width: 20px;
+        
+    }
+
+    #hamburger::after, #hamburger::before {
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 7px;
+        transition: .3s;
+        position: relative;
+    }
+
+    #nav.active #hamburger {
+        border-top-color: transparent;
+    }
+
+    #nav.active #hamburger::before {
+        transform: rotate(135deg);
+    }
+
+    #nav.active #hamburger::after {
+        transform: rotate(-135deg);
+        top: -9px;
+    }
+
 }
 
 main {
@@ -117,6 +181,7 @@ main {
     padding-bottom: 60px;
     margin-bottom: 5pt;
     margin-top: 20pt;
+    
 
 }
 
